--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,109 @@
-.home{
-    background-image: linear-gradient(rgba(0,0,0,0.5) , rgba(0,0,0,0.5)) , url(../images/hero-bg.jpg);
+/* GLOBAL CSS */
+h1,
+.h1 {
+    font-size: 3rem;
+}
+
+body {
+    background-color: #F5F5F5;
+}
+
+/* START OF HOME */
+.home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hero-bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
-.navbar-bg{
-    background-color: rgba(0,0,0,0.8);
+
+.navbar-bg {
+    background-color: rgba(0, 0, 0, 0.8);
 }
-h1, .h1{
-    font-size: 3rem;
+
+nav {
+    transition: all 0.3s;
 }
-body{
-    background-color: #F5F5F5;
+
+.nav-link {
+    border-bottom: 0px solid #ffffff;
+    transition: all 0.3s ease-in-out;
 }
-.navbar-dark, .navbar[data-bs-theme=dark] {
+
+.nav-link:hover {
+    border-bottom: 2px solid #ffffff;
+
+}
+
+.navbar-dark,
+.navbar[data-bs-theme=dark] {
     --bs-navbar-color: rgba(255, 255, 255);
 }
-.services-line{
+/* END OF HOME */
+
+/* START OF SERVICES */
+.services-line {
     width: 40px;
     height: 5px;
     background-color: #0078ff;
     margin: 0 auto;
 }
-.counters{
-    background-image: linear-gradient(rgba(43,127,221,0.8) , rgba(43,127,221,0.8)) , url(../images/counters-bg.jpg);
+/* END OF SERVICES */
+
+/* STRAT OF WORKS */
+.counters {
+    background-image: linear-gradient(rgba(43, 127, 221, 0.8), rgba(43, 127, 221, 0.8)), url(../images/counters-bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-.persons, .get-form{
-    background-image: linear-gradient(rgba(43,127,221,0.8) , rgba(43,127,221,0.8)) , url(../images/overlay-bg.jpg);
+/* END OF WORKS */
+
+/* START OF PERSON */
+.persons,
+.get-form {
+    background-image: linear-gradient(rgba(43, 127, 221, 0.8), rgba(43, 127, 221, 0.8)), url(../images/overlay-bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
 }
-/* .portfolio .text-center {
-    text-align: left !important;
-} */
-.carousel-indicators [data-bs-target]{
+
+.carousel-indicators [data-bs-target] {
     width: 15px;
     height: 15px;
     border-radius: 50%;
 }
+/* END OF PERSON */
+
+/* START OF BLOG */
 .portfolio .flex-shrink-1 {
     flex-shrink: 0 !important;
 }
-.getform-line{
+
+.getform-line {
     width: 7rem;
     height: 4px;
     background-color: #0078ff;
     margin: 0 0 2rem;
     text-align: left;
 }
-.blog button{
+
+.blog button {
     position: absolute;
     bottom: 90%;
     left: 35%;
 }
-.blog .travel{
+
+.blog .travel {
     position: absolute;
     bottom: 90%;
     left: 41%;
 }
-.icon{
+
+.icon {
     width: 8rem;
     height: 8rem;
     display: flex;
@@ -76,45 +113,37 @@ body{
     background-color: #Ffffff;
     transition: all 0.7s;
 }
-.service-item:hover .icon{
+
+.service-item:hover .icon {
     background-color: #0078FF;
     border: 10px solid #CDE1F8;
 }
-.portfolio-image{
+
+.portfolio-image {
     overflow: hidden;
 }
-.portfolio-image img{
+
+.portfolio-image img {
     transition: all 1s;
 }
-.portfolio-image:hover img{
-    transform: scale(1.3 , 1.3);
+
+.portfolio-image:hover img {
+    transform: scale(1.3, 1.3);
 }
-.nav-link{
-    border-bottom: 0px solid #ffffff;
-    transition: all 0.3s ease-in-out;
-}
-.nav-link:hover{
-    border-bottom: 2px solid #ffffff;
-    
-}
-.back-to-top{
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-}
-.social-media span i{
-    /* background-color: #Ffffff; */
+/* END OF BLOG */
+
+/* START OF CONTACT */
+.social-media span i {
     transition: all 0.3S;
 }
-.social-media span:hover i{
+
+.social-media span:hover i {
     background-color: #74C0FC;
     color: #CDE1F8;
-} */
-/* 
-element.style{
-    transition: all 0.3s;
 }
-element.style:hover{
-    color: #74C0FC;
-    background-color: #ffffff;
-} */
+/* END OF CONTACT */
+.top{
+    bottom: 1rem;
+    right: 1rem;
+    display: none;
+}
